Change order of menu items

--- a/welcome/international.html
+++ b/welcome/international.html
@@ -32,11 +32,11 @@
 <div class="topnav" id="myTopnav">
   <a href="./index.html">Welcome</a>
   <a href="./checklists.html">Checklists</a>
+  <a href="./people.html">People</a>
   <a href="./policies.html">Policies</a>
   <a href="./misc.html">Etc.</a>
-  <a href="./people.html">People</a>
   <a href="./links.html">Resources</a>
-  <a href="./international.html" class="active">International</a>
+  <a href="./international.html" class="active">InternationalS</a>
 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
