Update link to faculty page

--- a/welcome/people.html
+++ b/welcome/people.html
@@ -129,7 +129,7 @@ Staneslow.</p></li>
 <li><p><strong>Faculty members</strong></p>
 <p>In general, all our faculty members are more than willing to help
 graduate students in whatever ways they can, academically or otherwise.
-You can find a <a href="https://www.umass.edu/philosophy/faculty">list
+You can find a <a href="https://www.umass.edu/philosophy/faculty/position/current">list
 of our current faculty members</a> on our website.</p></li>
 </ul>
 </body>
