Fix broken link to hiring packet

--- a/welcome/checklists.html
+++ b/welcome/checklists.html
@@ -88,7 +88,7 @@ employment/funding in SPIRE (<a
 href="./policies.html#contract">more</a>)</li>
 <li><input type="checkbox" />Sign fellowship or other funding contract,
 if applicable (<a href="./policies.html#contract">more</a>)</li>
-<li><input type="checkbox" />Complete the HR hiring packet (if
+<li><input type="checkbox" />Complete <a href="https://www.umass.edu/hr/documents/hiring-forms-new-graduate-student-employees">the HR hiring packet</a> (if
 applicable) at least two weeks before the beginning of the Fall
 semester</li>
 <li><input type="checkbox" />Inform <a
