--- a/welcome/international.html
+++ b/welcome/international.html
@@ -36,7 +36,7 @@
   <a href="./policies.html">Policies</a>
   <a href="./misc.html">Etc.</a>
   <a href="./links.html">Resources</a>
-  <a href="./international.html" class="active">InternationalS</a>
+  <a href="./international.html" class="active">International</a>
 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
