Update for Fall 2024

--- a/welcome/index.html
+++ b/welcome/index.html
@@ -81,26 +81,18 @@ year or before the end of the first week of classes, I have put together
 a page with <a href="./misc.html">additional information</a> you may
 find helpful as you prepare your move to Amherst, including some
 information about <a href="./misc.html#housing">housing</a>.</p>
-<p>Fall semester begins on <strong>Tuesday, September 5th</strong>, but
+<p>Fall semester begins on <strong>Tuesday, September 3th</strong>, but
 you should <strong>make sure to arrive in the area a week or more before
 that</strong>. You are expected on campus for a departmental orientation
-event on <strong>Wednesday, August 30th</strong>. In addition, there is
-a Graduate School orientation event on Friday, September 1st that I
+event on <strong>Wednesday, August 28th</strong>. In addition, there is
+a Graduate School orientation event on Friday, August 30th that I
 encourage all of you to attend. International students are also required
-to attend an additional orientation event on Thursday, August 31st.
+to attend an additional orientation event on Thursday, August 29th.
 Finally, note that we will be hosting a start-of-the-year Departmental
-meeting, most likely on <strong>Friday, September 8th</strong>, which I
+meeting, most likely on <strong>Friday, September 6th</strong>, which I
 very much hope all of you can attend. We will “introduce” each of you to
 the rest of the department at this meeting. Check your email for the
 exact date, time and location.</p>
-<p>I should mention that I’ll be on parental leave during the Fall
-semester, and Kevin may end up covering for me a fair bit: all will
-depend on how things go with the new baby. For now, however, and until
-you hear otherwise, assume I’m your point person for all things related
-to the graduate program. I may be a bit slow to respond to email, and I
-apologize for that in advance. But if anything urgent comes up and I’m
-not getting back to you in time, don’t hesitate to get in touch with
-Beth. She’ll know what to do.</p>
 <p>Best of luck to you as you make this important transition.</p>
 <p>Yours,</p>
 <p>Alejandro</p>
