--- a/welcome/links.html
+++ b/welcome/links.html
@@ -60,16 +60,16 @@ function myFunction() {
 <ul>
 <li><a href="https://www.umass.edu/philosophy">Department
 Homepage</a></li>
-<li><a href="https://www.umass.edu/philosophy/faculty">Faculty
+<li><a href="https://www.umass.edu/philosophy/about/directory?keyword=&field_profile_type_target_id%5B5%5D=5">Faculty
 list</a></li>
 <li><a
-href="https://www.umass.edu/philosophy/future-graduate-courses">Graduate
+href="https://www.umass.edu/philosophy/graduate-courses">Graduate
 courses</a></li>
 <li><a
-href="https://www.umass.edu/philosophy/graduate-students">Graduate
+href="https://www.umass.edu/philosophy/about/directory?keyword=&field_profile_type_target_id%5B13%5D=13">Graduate
 student list</a></li>
 <li><a
-href="https://www.umass.edu/philosophy/philosophy-phd-program">Program
+href="https://www.umass.edu/philosophy/graduate-regulations/administration">Program
 regulations</a></li>
 </ul>
 <h2 id="umass-offices-and-information">UMass offices and
