--- a/welcome/people.html
+++ b/welcome/people.html
@@ -82,36 +82,27 @@ href="mailto:bellena@philos.umass.edu">bellena@philos.umass.edu</a>),
 graduate program in particular. Beth can answer questions concerning how
 one receives funding, how to pick up office keys, your academic record,
 how to reserve rooms on campus, and so on.</p></li>
-<li><p><strong>Christine Wilander</strong> (<a
-href="mailto:cwilander@umass.edu">cwilander@umass.edu</a>),
+<li><p><strong>Darlene Gore</strong> (<a
+href="mailto:darlenegore@umass.edu">darlenegore@umass.edu</a>),
 <em>Undergraduate Program Assistant</em></p>
-<p>Christine can answer questions concerning undergraduate requirements,
+<p>Darlene can answer questions concerning undergraduate requirements,
 resources for undergraduate students, undergraduate grading, including
 incompletes, enrollment overrides, the web site, copier accounts and
 using the copier, etc. In general, if you have a question that concerns
 you as a graduate student, employee or fellow, ask Beth. If it concerns
 your role as TA or TO responsible for undergraduate students, ask
-Christine.</p></li>
+Darlene.</p></li>
 <li><p><strong>Each other</strong></p>
 <p>Here are the members of the entering class of 2023. You will take
 both semesters of the proseminar together, and likely other classes as
 well.</p>
 <ul>
-<li>Jungmin Ohn (ancient) has a BA in Physics and Philosophy and an MA
-in Philosophy from Sogang University.</li>
-<li>Benjamin “Kory” Matteoli (logic, metaphysics) has a BA and an MA in
-Philosophy from UC Davis.</li>
-<li>Jacob B Green (ethics, epistemology, action) has a BA in Philosophy
-from UVM and an MA in Philosophy from the University of Houston.</li>
-<li>Lauren Wong (metaethics, mind) has a BA and an MA in Philosophy from
-San Francisco State University.</li>
-<li>Samantha (“Sammy”) Hirshland (ethics, epistemology) has a BA in
-Philosophy from Northeastern and an MA in Philosophy from Virginia
-Tech.</li>
-<li>Yuan He (epistemology, decision theory, science) has a BA in
-Geo-Information Science and Technology at Ocean University of China and
-an MA in philosophy from Wuhan University.</li>
-<li>Yuyan Tan (language) has a BA in philosophy from NYU.</li>
+<li>Chan, Kam Ho: Kam Ho is completing an MA in Philosophy at Hong Kong Baptist University, where he also completed a BA in Religion, Philosophy, and Ethics. He is interested in metaphysics and philosophy of language.</li>
+<li>Levc, Gabriel: Gabriel is completing an MA in Philosophy at the University of Vienna, where he also received his BA in Philosophy. He is interested in moral philosophy and philosophy of language.</li>
+<li>Langer, Jerry: Jerry completed a BA in Political Science at Central Connecticut University. He’s currently completing an MA in Philosophy at the University of Mississippi. He is interested in the history of early modern philosophy.</li>
+<li>Seidman-Zager, Joshua: Joshua has a BA in International Relations from Cornell University and an MSc in Forced Migration from the University of Oxford. He’s currently completing an MA in Philosophy at Northern Illinois University. He is interested in epistemology, political philosophy, philosophy of mind, and philosophy of language.</li>
+<li>Wu, Yiling: Yiling has a BA in Social Work from the City University of Macau. She is currently completing an MA in Philosophy at the University of Missouri-St. Louis. She is interested in philosophical and mathematical logic as well as in the philosophy of cognitive science and AI.</li>
+<li>Zhang, Lu (Nora): Nora has a BA in Philosophy at the University of Sun Yat-sen and an MA in Philosophy from University College London. She is interested in the history of early analytic philosophy and in philosophy of language.</li>
 </ul>
 <p>You should all have each other’s email addresses by now, but if you
 need someone’s contact information don’t hesitate to ask me.</p></li>
@@ -124,8 +115,8 @@ the graduate students</a> in the program under “graduate students” on
 the Department website:</p>
 <p>In particular, the following graduate students have gone out of their
 way in the past year to answer questions and help their fellow and
-prospective students: Cruz Davis, Youngchan Lee, Jillian Powell, Bex
-Staneslow.</p></li>
+prospective students: Cruz Davis, Jake Green, Youngchan Lee, Jillian Powell, Bex
+Staneslow, Yuyan Tan, He Yuan.</p></li>
 <li><p><strong>Faculty members</strong></p>
 <p>In general, all our faculty members are more than willing to help
 graduate students in whatever ways they can, academically or otherwise.
