--- a/welcome/policies.html
+++ b/welcome/policies.html
@@ -59,7 +59,7 @@ id="departmental-and-university-procedures-and-policies">Departmental
 and University Procedures and Policies</h1>
 <p>As a graduate student in the Department, you are expected to be
 familiar with the program’s <a
-href="https://www.umass.edu/philosophy/philosophy-phd-program">regulations</a>.
+href="https://www.umass.edu/philosophy/graduate-regulations/administration">regulations</a>.
 It is thus advisable that you read over them before the beginning of
 your first year and that you contact your advisor or the GPD if you have
 any questions about them.</p>
@@ -97,9 +97,9 @@ for classes</h2>
 needed to trigger the mechanisms that lead to your financial aid. You
 can change your courses without penalty until the end of add/drop so
 your choices need not be final. Registration continues through Monday,
-September 18th, 2023, the final day of the add/drop period.</p>
+September 16th, 2024, the final day of the add/drop period.</p>
 <p>All first-year students are <a
-href="https://www.umass.edu/philosophy/philosophy-phd-program#proseminar">required
+href="https://www.umass.edu/philosophy/graduate-regulations/preliminary-requirements#proseminar">required
 to take the Proseminar</a> (Philosophy 700) during both semesters of
 their first year. Typically, students take two other courses each
 semester of their first year, or sometimes three if they are on
@@ -107,8 +107,8 @@ fellowship and not teaching. We strongly encourage you to discuss your
 choice of courses with your advisor or the GPD by the end of the first
 week of classes.</p>
 <p>A <a
-href="https://www.umass.edu/philosophy/future-graduate-courses">list of
-philosophy graduate courses for Fall 2023</a> can be found on the
+href="https://www.umass.edu/philosophy/graduate-courses">list of
+philosophy graduate courses for Fall 2024</a> can be found on the
 Department website under “Graduate Courses”.</p>
 <p>In order to enroll in courses, you need to make use of SPIRE. The
 Graduate School provides information on enrollment <a
@@ -142,7 +142,7 @@ href="https://www.umass.edu/hr/documents/hiring-forms-new-graduate-student-emplo
 class="uri">https://www.umass.edu/hr/documents/hiring-forms-new-graduate-student-employees</a></p>
 <h2 id="tuition-waivers-and-bills"><a name="bills"></a> Tuition waivers
 and bills</h2>
-<p>Most forms of funding offered by the Department (Puryear fellowships,
+<p>Most forms of funding offered by the Department (fellowships,
 most TA/TO-ships) carry tuition waivers with them.</p>
 <p>You will get a bill from the Bursar’s Office. <em>Do not pay it
 immediately.</em> It takes a while for your tuition waiver to be applied
