--- a/welcome/checklists.html
+++ b/welcome/checklists.html
@@ -112,21 +112,20 @@ href="https://www.umass.edu/philosophy/philosophy-phd-program">program
 <li><input type="checkbox" />Familiarize yourself with the policies and procedures described on this <a href="./policies.html">page</a></li>
 </ul>
 <h2 id="to-do-during-the-week-of-august-28th">To do during the week of
-August 28th</h2>
+August 26th</h2>
 <ul class="task-list">
-<li><input type="checkbox" />Pickup your UCard by Tuesday, August 29th
+<li><input type="checkbox" />Pickup your UCard by Tuesday, August 27th
 (note that you no longer need to make an appointment: simply show up at
 the UCard office during their business hours and pick it up)</li>
 <li><input type="checkbox" />Attend the Department’s Orientation Event
-on <strong>Wednesday, August 30th</strong></li>
+on <strong>Wednesday, August 28thh</strong></li>
 <li><input type="checkbox" />For international students: attend the
 mandatory <a
 href="https://www.umass.edu/ipo/iss/arrivals-orientation">International
-Student Orientation</a> on <strong>Thursday, August 31st</strong></li>
+Student Orientation</a> on <strong>Thursday, August 29th</strong></li>
 <li><input type="checkbox" />Attend <a
 href="https://www.umass.edu/graduate/new-graduate-students/welcome-umass-graduate-school-wugs">WUGS,
-the Graduate School Orientation event</a> on <strong>Friday, September
-1st</strong>.</li>
+the Graduate School Orientation event</a> on <strong>Friday, August 30th</strong>.</li>
 <li><input type="checkbox" />Schedule a one-on-one meeting with the <a
 href="../people">GPD</a> for the first week of classes</li>
 <li><input type="checkbox" />Schedule your first meeting with <a
@@ -142,7 +141,7 @@ classes</h2>
 <li><input type="checkbox" />Meet with your advisor</li>
 <li><input type="checkbox" />Meet with the GPD</li>
 <li><input type="checkbox" />Attend the Department’s start of the year
-meeting on <strong>September 8th</strong></li>
+meeting on <strong>September 6th</strong></li>
 </ul>
 </body>
 </html>
