Fix broken links

--- a/welcome/people.html
+++ b/welcome/people.html
@@ -110,7 +110,7 @@ need someone’s contact information don’t hesitate to ask me.</p></li>
 <p>In many cases, your best information about practical matters at UMass
 will come from more experienced graduate students who have been here for
 a couple of years. You can find a <a
-href="https://www.umass.edu/philosophy/graduate-students">list of all
+href="https://www.umass.edu/philosophy/about/directory?keyword=&field_profile_type_target_id%5B13%5D=13">list of all
 the graduate students</a> in the program under “graduate students” on
 the Department website:</p>
 <p>In particular, the following graduate students have gone out of their
@@ -120,7 +120,7 @@ Staneslow, Yuyan Tan, He Yuan.</p></li>
 <li><p><strong>Faculty members</strong></p>
 <p>In general, all our faculty members are more than willing to help
 graduate students in whatever ways they can, academically or otherwise.
-You can find a <a href="https://www.umass.edu/philosophy/faculty/position/current">list
+You can find a <a href="https://www.umass.edu/philosophy/about/directory?keyword=&field_profile_type_target_id%5B5%5D=5">list
 of our current faculty members</a> on our website.</p></li>
 </ul>
 </body>
