--- a/welcome/checklists.html
+++ b/welcome/checklists.html
@@ -62,22 +62,22 @@ contains information about <a
 href="https://www.umass.edu/it/support/google-apps/google-mail-faq?_ga=2.248890880.642618172.1594991622-2031243065.1594991622">setting
 up your UMass email account</a>, updating your information on <a
 href="https://www.spire.umass.edu/psp/heproda/?cmd=login&amp;languageCd=ENG&amp;">SPIRE</a>,
-<a href="https://www.umass.edu/ucard/content/how-get-ucard">getting your
+<a href="https://www.umass.edu/bursar/ucard/get-ucard">getting your
 UCard</a>, completing your <a
 href="https://www.umass.edu/uhs/immunizations">immunization record</a>,
-<a href="">obtaining health insurance</a>, etc.</p>
-<p>If you are an <a href="./international.html">international student</a>, you should have
+<a href="https://www.umass.edu/uhs/graduate-student-health-insurance">obtaining health insurance</a>, etc.</p>
+<p>If you are an <strong>international student</strong>, you should have
 already started working with the <a
-href="https://www.umass.edu/ipo/iss">International Programs Office
-(IPO)</a> to complete your I-20 and GLACIER forms and to obtain your
-visa. <strong>If you haven’t yet, please contact them as soon as
-possible</strong>.</p>
+href="https://www.umass.edu/global-affairs/international-students-scholars">International Student and Scholar Services
+(ISS)</a> to complete your I-20 and GLACIER forms and to obtain your
+visa. <strong>If you haven’t yet</strong>, please contact them as soon as
+  possible, and <strong>whether or not you have</strong>, make sure to review <a href="./international.html">this page</a> for some additional information.</p>
 <h2 id="to-do-as-soon-as-possible">To do as soon as possible</h2>
 <ul class="task-list">
 <li><input type="checkbox" />Make sure that all final transcripts
 necessary for matriculation have been submitted</li>
 <li><input type="checkbox" /><a
-href="https://www.umass.edu/it/accounts/activate-your-account">Activate
+href="https://umass.service-now.com/sp?id=kb_article_view&sysparm_article=KB0012140">Activate
 your University IT account</a></li>
 <li><input type="checkbox" />Make sure you have access to <a
 href="https://www.umass.edu/it/support/google-apps/google-mail-faq?_ga=2.248890880.642618172.1594991622-2031243065.1594991622">your
@@ -96,7 +96,7 @@ href="mailto:bellena@philos.umass.edu">Beth</a> of when you’ll be
 arriving in the area</li>
 <li><input type="checkbox" />Upload a photo, as well as a copy of a
 government issued ID, to the <a
-href="https://www.umass.edu/ucard/content/ucard-photo-upload-online-photo-submission">UCard
+href="https://afs-ucardphoto2.campus.ads.umass.edu/">UCard
 photo upload website</a> (note that you will need your NetID and
 password for this )</li>
 <li><input type="checkbox" />Register for the proseminar and a
@@ -110,24 +110,23 @@ on campus</li>
 href="https://www.umass.edu/philosophy/graduate-regulations/administration">program
     regulations</a></li>
 <li><input type="checkbox" />Familiarize yourself with the policies and procedures described on this <a href="./policies.html">page</a></li>
+<li><input type="checkbox" />International students should make sure they have <a href="./international.html#taxes-finances">access to funds upon arrival</a>---this may require working with your bank ahead of time.</li>
 </ul>
-<h2 id="to-do-during-the-week-of-august-28th">To do during the week of
-August 26th</h2>
+<h2 id="to-do-during-the-week-of-august-25th">To do during the week of
+August 25th</h2>
 <ul class="task-list">
-<li><input type="checkbox" />Pickup your UCard by Tuesday, August 27th
+<li><input type="checkbox" />Pickup your UCard by Tuesday, August 26th
 (note that you no longer need to make an appointment: simply show up at
 the UCard office during their business hours and pick it up)</li>
-<li><input type="checkbox" />Attend the Department’s Orientation Event
-on <strong>Wednesday, August 28thh</strong></li>
 <li><input type="checkbox" />For international students: attend the
 mandatory <a
-href="https://www.umass.edu/ipo/iss/arrivals-orientation">International
-Student Orientation</a> on <strong>Thursday, August 29th</strong></li>
+href="https://www.umass.edu/global-affairs/international-students-scholars/admitted/orientation">International
+Student Orientation</a> on <strong>Wednesday, August 27th</strong></li>
 <li><input type="checkbox" />Attend <a
 href="https://www.umass.edu/graduate/new-graduate-students/welcome-umass-graduate-school-wugs">WUGS,
-the Graduate School Orientation event</a> on <strong>Friday, August 30th</strong>.</li>
-<li><input type="checkbox" />Schedule a one-on-one meeting with the <a
-href="../people">GPD</a> for the first week of classes</li>
+    the Graduate School Orientation event</a> on <strong>Friday, August 29th</strong>.</li>
+<li><input type="checkbox" />Attend the Department’s Orientation Event
+on <strong>Friday, August 29th</strong></li>
 <li><input type="checkbox" />Schedule your first meeting with <a
 href="https://www.umass.edu/philosophy/graduate-regulations/administration#advisors">your
 advisor</a> for the first week of classes</li>
@@ -139,9 +138,8 @@ building</a></li>
 classes</h2>
 <ul class="task-list">
 <li><input type="checkbox" />Meet with your advisor</li>
-<li><input type="checkbox" />Meet with the GPD</li>
 <li><input type="checkbox" />Attend the Department’s start of the year
-meeting on <strong>September 6th</strong></li>
+meeting on <strong>September 5th</strong></li>
 </ul>
 </body>
 </html>
