--- a/welcome/index.html
+++ b/welcome/index.html
@@ -81,18 +81,19 @@ year or before the end of the first week of classes, I have put together
 a page with <a href="./misc.html">additional information</a> you may
 find helpful as you prepare your move to Amherst, including some
 information about <a href="./misc.html#housing">housing</a>.</p>
-<p>Fall semester begins on <strong>Tuesday, September 3th</strong>, but
-you should <strong>make sure to arrive in the area a week or more before
-that</strong>. You are expected on campus for a departmental orientation
-event on <strong>Wednesday, August 28th</strong>. In addition, there is
-a Graduate School orientation event on Friday, August 30th that I
-encourage all of you to attend. International students are also required
-to attend an additional orientation event on Thursday, August 29th.
-Finally, note that we will be hosting a start-of-the-year Departmental
-meeting, most likely on <strong>Friday, September 6th</strong>, which I
-very much hope all of you can attend. We will “introduce” each of you to
-the rest of the department at this meeting. Check your email for the
-exact date, time and location.</p>
+<p>Fall semester begins on <strong>Tuesday, September 2nd</strong>,
+but you should <strong>make sure to arrive in the area a week or more
+before that</strong>. You are expected on campus for a departmental
+orientation event on <strong>Friday, August 29th</strong>. This will
+take place in conjunction with the Graduate School orientation event
+scheduled for that day that I encourage all of you to attend.
+International students are also required to attend an additional
+orientation event on Thursday, August 28th. Finally, note that we will
+be hosting a start-of-the-year Departmental meeting, most likely
+on <strong>Friday, September 5th</strong>, which I very much hope all
+of you can attend. We will “introduce” each of you to the rest of the
+department at this meeting. Check your email for the exact date, time
+and location.</p>
 <p>Best of luck to you as you make this important transition.</p>
 <p>Yours,</p>
 <p>Alejandro</p>
