--- a/welcome/international.html
+++ b/welcome/international.html
@@ -50,17 +50,16 @@ function myFunction() { var x = document.getElementById("myTopnav");
 </script>
 <h1 id="for-international-students">For International Students</h1>
 <p>You should have already begun working with the International
-Programs Office (IPO) to complete your I-20 and obtain your visa. If
-you haven’t yet, you should start as soon as possible. You can find
-contact information on
-the <a href="https://www.umass.edu/ipo/iss">IPO’s website</a>.</p>
-<p>Please defer to IPO in matters pertaining to your visa and
+Student &amp; Scholar Services (ISSS) to complete your I-20 and obtain
+your visa. If you haven’t yet, you should start as soon as possible.
+You can find contact information on
+the <a href="https://www.umass.edu/global-affairs/international-students-scholars">ISSS’s
+website</a>.</p>
+<p>Please defer to ISSS in matters pertaining to your visa and
 immigration; they can tell you what documents are necessary, and when
-and how to submit them. The IPO’s website also contains a lot of other
-information that may be useful to international students. They also
-publish a handbook for International Students, which you can
-find <a href="https://www.umass.edu/ipo/sites/default/files/UMass%20IPO%20International%20Student%20Handbook.pdf"
-class="uri">here</a>.</p>
+and how to submit them. The ISSS’s website also contains a lot of other
+  <a href="https://www.umass.edu/global-affairs/international-students-scholars/resources">information
+  that may be useful</a> to international students. </p>
 <p>You should be aware that the process of obtaining a visa can be
 time-consuming and complicated, and may involve:</p>
 <ul>
@@ -81,24 +80,36 @@ remain there.)</li>
 <p>Before you contact the consulate, you should make sure that both
 the tuition waiver and any fellowship/TA-ship are reflected on your
 I-20.</p>
-<p>You will also need to fill out tax information through the
-University’s GLACIER tax system. You should receive an email
-from <a href="https://www.umass.edu/humres/">Human Resources (HR)</a>
-about this. Every country has its own tax agreement with the U.S. (the
-amount withheld will vary by country). HR can help you with filling
-out the form.</p>
-<p>International students receiving fellowship money need an
-international tax identification number (ITIN). (A social security
-number, SSN, is only needed for TAs/TOs.) You will need to go through
-IPO for the ITIN, with the help of the University Controller’s Office.
-This process takes a long time, so get on this ASAP by talking to IPO.
+<h2 id="taxes-finances">Taxes and finances</h2>
+<p>As an international student, you will also need
+  to <a href="https://www.umass.edu/global-affairs/international-students-scholars/resources/financial-health">file
+  taxes</a>. You should receive an email
+  from <a href="https://www.umass.edu/humres/">Human Resources
+  (HR)</a> about getting access
+  to <a href="https://www.umassp.edu/nonresident-alien-taxation/access-sprintax-tax-preparation-software">Sprintax</a>.
+  Every country has its own tax agreement with the U.S. (the amount
+  withheld will vary by country). HR can help you with filling out the
+  form.</p>
+
+<p>You will also need to obtain a Social Security Number (SSN). The Office of Global Affairs has the most up-to-date <a href="https://www.umass.edu/global-affairs/international-students-scholars/resources/basics/social-security">information</a> on how to do that. 
+If for some reason you are not yet eligible for a SSN, you will need to obtain a international tax identification number (ITIN). You will need to go through
+ISSS for the ITIN, with the help of the University Controller’s Office.
+This process takes a long time, so get on this ASAP by talking to ISSS.
 Beth can also help direct you. You will need your Visa, I-20, most
 recent I-94, and your passport. Note that the Controller’s Office is
 not on campus. Their website is
 here: <a href="https://www.umass.edu/controller/"
 class="uri">https://www.umass.edu/controller/</a></p>
-<p>Contact the IPO, HR and/or Beth with any questions throughout this
-process.</p>
+<p>Contact the ISSS, HR and/or Beth with any questions throughout this
+  process.</p>
+<h2>Preparing for your trip</h2>
+<p>The Office of Global Affairs has some helpful <a href="https://www.umass.edu/global-affairs/international-students-scholars/getting-umass-amherst">information</a> for making arrangements for your trip. In particular, if you are flying into Boston, there is a very affordable shuttle service for new international students you can book <a href="https://general-umass.nbsstore.net/umass-express?TSPD_101_R0=0838a9d8d6ab20000904938bb39c1c216e8a0e2543abae0bff4416fab0a54ac2cb82fe12c1a00a1f08c00f275b143000e8afd0f3ca88246f0869eef4954db72823241a77ec49b5e4ae1bde857472fa89b93d5f722f4f262276f40c21b341d51a">here</a>.</p>
+
+<p>Once you arrive in the US, you probably will need access to a non-US bank account, at least temporarily. Before you depart for the US, you should make sure to lift any restrictions your bank may place on accessing your funds from abroad, so that you can use your debit or credit card in the US. (For security reasons, some banks put restrictions on where your card can be used from. You can typically remove these restrictions yourself if you use online banking, or by making a quick call to your bank.)</p>
+
+<p>You will most likely require a US-phone number for things like opening a bank account, finishing required HR documents, fully setting up your SPIRE account, etc. Also, roaming fees for the US are typically quite expensive, so it is a good idea to avoid using your home country’s phone number. The Office of Global Affairs has some information <a href="https://www.umass.edu/global-affairs/international-students-scholars/resources/basics/banks">on this page</a> about ways of getting a US SIM card as an international student, even before you arrive in the US.</p>
+
+
 
 </body>
 </html>
