--- a/welcome/misc.html
+++ b/welcome/misc.html
@@ -75,21 +75,21 @@ href="./links.html">this page</a>.</p>
 number of graduate students live in Northampton (which is pretty
 expensive), but others live in Amherst, South Hadley, Hadley, Holyoke,
 Greenfield, Easthampton, etc. You may want to start your search of
-housing by emailing the current student mailing list: <a
-href="mailto:philos-all-grad@groups.umass.edu">philos-all-grad@groups.umass.edu</a></p>
-<p>Current students are often aware of places that are coming up for
+housing by emailing the current student mailing
+list: <a href="mailto:philos-all-grad@groups.umass.edu">philos-all-grad@groups.umass.edu</a>.
+Current students are often aware of places that are coming up for
 rent.</p>
 <p>The University offers assistance on housing through a couple of
 different offices. The main place is the Office of Housing and Residence
 Life. A lot of apartments and rooms are posted on their website at <a
 href="https://offcampushousing.umass.edu/"
 class="uri">https://offcampushousing.umass.edu/</a></p>
-<p>On-campus housing can be sought through Residential Life Student
-Services, 235 Whitmore, phone (413) 545-2100. The website is: <a
-href="https://www.umass.edu/living/"
-class="uri">https://www.umass.edu/living/</a>. Family Housing is handled
-at North Village and can be accessed through the same URL. Their phone
-number is (413) 545-3115.</p>
+<!-- <p>On-campus housing can be sought through Residential Life Student -->
+<!-- Services, 235 Whitmore, phone (413) 545-2100. The website is: <a -->
+<!-- href="https://www.umass.edu/living/" -->
+<!-- class="uri">https://www.umass.edu/living/</a>. Family Housing is handled -->
+<!-- at North Village and can be accessed through the same URL. Their phone -->
+<!-- number is (413) 545-3115.</p> -->
 <p>Other resources for finding housing include local newspapers and on
   bulletin boards. Some online sites to check include:</p>
 
@@ -98,6 +98,8 @@ number is (413) 545-3115.</p>
   <li><a href="https://www.rentnoho.com/">Rent Noho</a></li>
   <li><a href="https://www.robinsonre.com/">Robinson Real Estate Service</a></li>
 </ul>
+
+<p>Potential landlords may ask for a credit report, references from previous landlords, and other documentation. <strong>If you are an international student</strong>, do let your potential landlord know that: they may be willing to waive these requirements for you, especially if they have experience hosting international students.</p>
 
 <h2 id="travel-information"><a name="travel"></a>Travel information</h2>
 <p>The closest major airport is Bradley International Airport (BDL),
@@ -154,7 +156,9 @@ href="https://www.bankesb.com/">Easthampton Savings Bank</a>, <a
 href="https://www.bankofamerica.com/">Bank of America</a>, and the <a
 href="https://www.umassfive.coop/">UMassFive College Credit Union</a>.
 You will need an American address to open an account, so you may need to
-wait until you’ve secured a place in order to open an account.</p>
+wait until you’ve secured a place in order to open an account: you will probably need to bring a signed copy of your lease in order to open an account.</p>
+
+<p>Note that in order to open a bank account online, you typically need to list your Social Security Number (SSN). If you are an <strong>international student</strong>, you probably don’t have one. Most banks allow you to open an account without a SSN, but this typically requires you to make an in-person appointment with them. Reach out to banks beforehand to make an appointment and make sure to bring all required documents.</p>
 <p>Once you have a bank account, enroll in Excess Express on your
 financials page in SPIRE: <a
 href="https://www.umass.edu/bursar/refunds-and-excess-express"
