--- a/welcome/people.html
+++ b/welcome/people.html
@@ -93,16 +93,15 @@ you as a graduate student, employee or fellow, ask Beth. If it concerns
 your role as TA or TO responsible for undergraduate students, ask
 Darlene.</p></li>
 <li><p><strong>Each other</strong></p>
-<p>Here are the members of the entering class of 2023. You will take
+<p>Here are the members of the entering class of 2025. You will take
 both semesters of the proseminar together, and likely other classes as
 well.</p>
 <ul>
-<li>Chan, Kam Ho: Kam Ho is completing an MA in Philosophy at Hong Kong Baptist University, where he also completed a BA in Religion, Philosophy, and Ethics. He is interested in metaphysics and philosophy of language.</li>
-<li>Levc, Gabriel: Gabriel is completing an MA in Philosophy at the University of Vienna, where he also received his BA in Philosophy. He is interested in moral philosophy and philosophy of language.</li>
-<li>Langer, Jerry: Jerry completed a BA in Political Science at Central Connecticut University. He’s currently completing an MA in Philosophy at the University of Mississippi. He is interested in the history of early modern philosophy.</li>
-<li>Seidman-Zager, Joshua: Joshua has a BA in International Relations from Cornell University and an MSc in Forced Migration from the University of Oxford. He’s currently completing an MA in Philosophy at Northern Illinois University. He is interested in epistemology, political philosophy, philosophy of mind, and philosophy of language.</li>
-<li>Wu, Yiling: Yiling has a BA in Social Work from the City University of Macau. She is currently completing an MA in Philosophy at the University of Missouri-St. Louis. She is interested in philosophical and mathematical logic as well as in the philosophy of cognitive science and AI.</li>
-<li>Zhang, Lu (Nora): Nora has a BA in Philosophy at the University of Sun Yat-sen and an MA in Philosophy from University College London. She is interested in the history of early analytic philosophy and in philosophy of language.</li>
+<li>Agarwal, Yash: Yash is currently completing an MA at Virginia Tech. He has a BA from Ashoka University. He is interested in social epistemology and the philosophy of language.</li>
+<li>Castillo Ibáñez, Jordi: Jordi completed a BA in Philosophy at the University of Barcelona and an MSc in Philosophy of Science at the London School of Economics and Political Science. He is interested in metaphysics and philosophy of language.</li>
+<li>Chia, Theophilus: Theo is currently finishing an MA in Philosophy at Texas Tech. He has a BS and an MS in Economics from the University of Texas at Dallas. He interested in philosophy of language, epistemology, ethics, and political philosophy.</li>
+<li>Harris, Laurie: Laurie is completing an MA at NIU. She holds a BA in Philosophy from Wheaton College. She’s interested in philosophy of language, philosophy of mind, and the history of analytic philosophy.</li>
+<li>Walton, Mykelle: Mykelle is completing a BA in Philosophy at Mount Holyoke College. She is interested in aesthetics and metaphysics.</li>
 </ul>
 <p>You should all have each other’s email addresses by now, but if you
 need someone’s contact information don’t hesitate to ask me.</p></li>
