--- a/welcome/policies.html
+++ b/welcome/policies.html
@@ -98,17 +98,17 @@ needed to trigger the mechanisms that lead to your financial aid. You
 can change your courses without penalty until the end of add/drop so
 your choices need not be final. Registration continues through Monday,
 September 16th, 2024, the final day of the add/drop period.</p>
-<p>All first-year students are <a
-href="https://www.umass.edu/philosophy/graduate-regulations/preliminary-requirements#proseminar">required
-to take the Proseminar</a> (Philosophy 700) during both semesters of
-their first year. Typically, students take two other courses each
-semester of their first year, or sometimes three if they are on
-fellowship and not teaching. We strongly encourage you to discuss your
+<p>All first-year students
+are <a href="https://www.umass.edu/philosophy/graduate-regulations/preliminary-requirements#proseminar">required
+to take the Proseminar</a> (Philosophy 700) during the Fall of their
+first year. Typically, students take five other courses during their
+their first year, or sometimes six if they are not teaching during
+their first two semesters. We strongly encourage you to discuss your
 choice of courses with your advisor or the GPD by the end of the first
 week of classes.</p>
 <p>A <a
 href="https://www.umass.edu/philosophy/graduate-courses">list of
-philosophy graduate courses for Fall 2024</a> can be found on the
+philosophy graduate courses for Fall 2025</a> can be found on the
 Department website under “Graduate Courses”.</p>
 <p>In order to enroll in courses, you need to make use of SPIRE. The
 Graduate School provides information on enrollment <a
